add product part_id, part_name to tickets details
