# rest-api-spec.yaml
@@ -719,6 +719,12 @@ components:
           product_name:
             type: string
             example: "pruhovane podkolienky"
+          part_id:
+            type: number
+            example: null
+          part_name:
+            type: string
+            example: null
           description:
             type: string
             example: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.'
